--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,8 @@
     <string name="title_activity_welcome">Welcome</string>
 
 
+    <!-- Strings related to login -->
+    <string name="FireBase_Menu_URL">https://restaurant-managment.firebaseio.com/Menu</string>
+
+
 </resources>
