--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <!-- Strings related to FIREBASE -->
     <string name="FireBase_URL">https://restaurant-managment.firebaseio.com</string>
     <string name="FireBase_Menu_URL">https://restaurant-managment.firebaseio.com/Menu</string>
+    <string name="FireBase_Customer_URL">https://restaurant-managment.firebaseio.com/Customer</string>
     <string name="FireBase_Review_URL">https://restaurant-managment.firebaseio.com/Review</string>
     <string name="FireBase_Order_URL">https://restaurant-managment.firebaseio.com/Order</string>
 
@@ -79,6 +80,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_review_home">ReviewHome</string>
     <string name="title_activity_add_review">AddReview</string>
+    <string name="title_activity_add_customer_home">AddCustomerHome</string>
 
 
 </resources>
